# cgal-examples

./: CMakeLists.txt  README.md  conanbuild.bat
B-HiCGAL/: CMakeLists.txt
B-HiCGAL/src/IO/: A_PolygonMeshIO.cpp
C-Simple/: CMakeLists.txt
C-Simple/src/Subdivision_method_3/: DooSabin_subdivision.cpp  Loop_subdivision.cpp  Sqrt3_subdivision.cpp
examples/: CMakeLists.txt
examples/AABBTree/: AABB_custom_example.cpp
examples/IO/: PolygonMeshIO.cpp
examples/Intersections/: segment_plane_intersections.cpp  triangle_cuboid_intersections.cpp  triangle_triangle_intersections.cpp
examples/Polygon_mesh_processing/: Mesh_slicer.cpp  PolygonSoupToPolygonMesh_advance.cpp  approximate_hausdorff_distance_simple.cpp  model_statistics.cpp
examples/Polygon_mesh_processing/connected_components/: connected_components_example.cpp  split_connected_components_indexmap.cpp  split_connected_components_simple.cpp
examples/Solvers/: cgal_svd.cpp  eigen_svd.cpp  solve_transform_matrix.cpp
examples/Subdivision_method_3/: CatmullClark_subdivision.cpp
examples/Surface_reconstruction/: advancing_front_test.cpp  cgal_tutorials.cpp
include/: objioplugin.hpp
